compiler/tests/fixtures/invalid/semantics/singleton_pool_with_max_not_1.viv
// Invalid: 'is' pool with max != 1

action bad-singleton:
    roles:
        @actor:
            as: initiator
        @item*:
            as: item
            n: 1-3
            is: @actor.tool
